--- a/qr-code-component-tailwind/index.html
+++ b/qr-code-component-tailwind/index.html
@@ -29,7 +29,7 @@
         <div class="container-img h-3/5 w-full rounded-lg overflow-hidden">
           <img
             src="./images/image-qr-code.png"
-            alt="qr-img"
+            alt="qr-code-image"
             class="h-full w-full object-cover"
           />
         </div>
