--- a/intro-section-with-dropdown-navigation-main/index.html
+++ b/intro-section-with-dropdown-navigation-main/index.html
@@ -21,7 +21,7 @@
         </div>
         <ul class="nav__link__container">
           <li class="nav__link__item feature__parent">
-            <a href=""
+            <a 
               >Features
               <span
                 ><img
@@ -30,6 +30,96 @@
                   class="" /></span
             ></a>
             <ul class="feature__dropdown hide">
+              <li>
+                <a role="button"
+                
+                  ><span
+                    ><img src="./images/icon-todo.svg" alt="todo-svg" /></span
+                  >Todo List</a
+                >
+              </li>
+              <li>
+                <a href=""
+                  ><span
+                    ><img
+                      src="./images/icon-calendar.svg"
+                      alt="todo-svg" /></span
+                  >Calender</a
+                >
+              </li>
+              <li>
+                <a href=""
+                  ><span
+                    ><img
+                      src="./images/icon-reminders.svg"
+                      alt="todo-svg" /></span
+                  >Reminders</a
+                >
+              </li>
+              <li>
+                <a href=""
+                  ><span
+                    ><img
+                      src="./images/icon-planning.svg"
+                      alt="todo-svg" /></span
+                  >Planning</a
+                >
+              </li>
+            </ul>
+          </li>
+          <li class="nav__link__item company__parent">
+            <a 
+              >Company
+              <span><img src="./images/icon-arrow-down.svg" alt="" /></span
+            ></a>
+            <ul class="company__dropdown hide">
+              <li>
+                <a href="">Todo List</a>
+              </li>
+              <li>
+                <a href="">Calender</a>
+              </li>
+              <li>
+                <a href="">Reminders</a>
+              </li>
+              <li>
+                <a href="">Planning</a>
+              </li>
+            </ul>
+          </li>
+          <li><a href="">Careers</a></li>
+          <li><a href=""> About</a></li>
+        </ul>
+      </div>
+      <div class="nav__buttons">
+        <ul>
+          <li><a href="">Login</a></li>
+          <li><a href="" class="nav__register__btn">Register</a></li>
+        </ul>
+        <div class="nav__humbugger ">
+          <img
+            src="./images/icon-menu.svg"
+            alt="nav__humbugger"
+            nav__humbugger__icon
+            id="humbugger__icon"
+          />
+        </div>
+      </div>
+      <div class="nav__mobile hide ">
+        <div class="nav__close__humbugger">
+          <img src="./images/icon-close-menu.svg" alt="">
+        </div>
+        <ul class="nav__mobile__links">
+          <li class="nav__link__item mobile__feature__parent">
+            <a 
+              >Features
+              <span
+                ><img
+                  src="./images/icon-arrow-down.svg"
+                  alt="down-arrow"
+                  class="" /></span
+            ></a>
+            <ul class="mobile__feature__dropdown hide">
               <li>
                 <a href=""
                   ><span
@@ -66,12 +156,12 @@
               </li>
             </ul>
           </li>
-          <li class="nav__link__item company__parent">
-            <a href=""
+          <li class="nav__link__item mobile__company__parent">
+            <a 
               >Company
               <span><img src="./images/icon-arrow-down.svg" alt="" /></span
             ></a>
-            <ul class="company__dropdown hide">
+            <ul class="mobile__company__dropdown hide">
               <li>
                 <a href="">Todo List</a>
               </li>
@@ -89,12 +179,19 @@
           <li><a href="">Careers</a></li>
           <li><a href=""> About</a></li>
         </ul>
-      </div>
-      <div class="nav__buttons">
-        <ul>
-          <li><a href="">Login</a></li>
-          <li><a href="" class="nav__register__btn">Register</a></li>
-        </ul>
+        <div class="nav__buttons">
+          <ul>
+            <li><a href="">Login</a></li>
+            <li><a href="" class="nav__register__btn">Register</a></li>
+          </ul>
+          <div class="nav__humbugger hide">
+            <img
+              src="./images/icon-menu.svg"
+              alt="nav__humbugger"
+              nav__humbugger__icon
+              id="humbugger__icon"
+            />
+          </div>
       </div>
     </nav>
 
@@ -110,14 +207,37 @@
             <a href="">Learn more</a>
           </div>
           <div class="main__comapines__container">
-            <img src="./images/client-databiz.svg" alt="databiz-logo" />
-            <img src="./images/client-audiophile.svg" alt="audiophile-logo" />
-            <img src="./images/client-meet.svg" alt="meet-logo" />
-            <img src="./images/client-maker.svg" alt="maker-logo" />
+            <img
+              class="company__logo"
+              src="./images/client-databiz.svg"
+              alt="databiz-logo"
+            />
+            <img
+              class="company__logo"
+              src="./images/client-audiophile.svg"
+              alt="audiophile-logo"
+            />
+            <img
+              class="company__logo"
+              src="./images/client-meet.svg"
+              alt="meet-logo"
+            />
+            <img
+              class="company__logo"
+              src="./images/client-maker.svg"
+              alt="maker-logo"
+            />
           </div>
         </div>
         <div class="main__container__right">
-          <img src="./images/image-hero-desktop.png" alt="" />
+          <!-- <img src="./images/image-hero-desktop.png" alt="" /> -->
+          <picture>
+            <source
+              media="(min-width:1000px)"
+              srcset="./images/image-hero-desktop.png"
+            />
+            <img src="./images/image-hero-mobile.png" alt="hero image" />
+          </picture>
         </div>
       </div>
     </main>
