Intro section with dropdown navigation complete

--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
           >Qr Code Component (Tailwind CSS)</a
         >
       </li>
+      <li>
+        <a
+          href="./intro-section-with-dropdown-navigation-main/index.html"
+          target="_blank"
+          >Intro section with dropdown navigation</a
+        >
+      </li>
     </ul>
   </body>
 </html>
